crates/runtime/tests/source_unavailable/snapshots/integration__source_unavailable__source_down_at_startup_loads_once_reachable.snap
---
source: crates/runtime/tests/source_unavailable/mod.rs
expression: "arrow::util::pretty::pretty_format_batches(&batches)?"
---
+----+---+
| s  | n |
+----+---+
| 21 | 3 |
+----+---+
